H1 title issue in journal Fix main-content overflow issue in new version of logseq

--- a/mocha.css
+++ b/mocha.css
@@ -1,3 +1,4 @@
+/* Journal Title */
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"); /*@import for "Montserrat" Font If you would like to use it, change `--ls-font-family: Inter` to `--ls-font-family: Montserrat` */
 
 :root {
@@ -23,106 +24,14 @@
   --change-me: hotpink; /* for dev purposes only used to visually identify elements that are not initially clear */
 }
 
-.white-theme,
-html[data-theme="light"] {
-  --red: #e75154;
-  --orange: #ffa542;
-  --green: #2a9d8f;
-  --golden: 255, 202, 86; /*rgb(255, 202, 86)*/
-  --blue: #5397d3;
-  --white: #ffffff;
+@media (prefers-color-scheme: dark) {
+  html {
+    background-color: #1a1a1a;
+  }
 
-  --main-content-bg: var(--white);
-
-  --ls-primary-background-color: #f5f5f5;
-  --ls-secondary-background-color: var(--ls-primary-background-color);
-  --ls-tertiary-background-color: #eef3f7;
-  --ls-quaternary-background-color: #eeeeee;
-
-  --ls-table-tr-even-background-color: 245, 245, 245; /*rgb(245, 245, 245)*/
-  --ls-table-tr-odd-background-color: 255, 255, 255; /*rgb(255, 255, 255)*/
-
-  --ls-active-primary-color: var(--blue);
-  --ls-active-secondary-color: var(--blue);
-
-  --ls-block-properties-background-color: #f4f4f4;
-  --ls-page-properties-background-color: #f4f4f4;
-
-  --ls-search-background-color: var(--ls-primary-background-color);
-  --ls-border-color: rgba(232, 229, 229);
-  --ls-secondary-border-color: rgb(226, 231, 236);
-  --ls-guideline-color: var(--ls-border-color);
-  --ls-menu-hover-color: var(--ls-a-chosen-bg);
-  --ls-primary-text-color: #383232;
-  --ls-secondary-text-color: #383232;
-  --ls-title-text-color: var(--ls-primary-text-color);
-
-  --ls-link-text-color: #246eb4;
-  --ls-link-text-hover-color: #2466a6;
-  --ls-link-ref-text-color: #246eb4;
-  --ls-link-ref-text-hover-color: #2466a6;
-
-  --ls-tag-text-color: #3f3f3f;
-  --ls-tag-text-hover-color: #2b4451;
-
-  --ls-slide-background-color: var(--white);
-
-  --ls-block-bullet-border-color: #dedede;
-  --ls-block-bullet-color: #433f3840;
-  --ls-block-highlight-color: #c0e6fd;
-
-  --ls-selection-background-color: #557bed;
-
-  --ls-page-checkbox-color: var(--blue);
-  --ls-page-checkbox-border-color: var(--blue);
-
-  --ls-page-inline-code-color: 2, 144, 158; /* rgb(2, 144, 158) */
-  --ls-page-inline-code-bg-color: #f7f7f7;
-
-  --ls-scrollbar-foreground-color: rgb(125, 125, 125, 0.2);
-  --ls-scrollbar-background-color: var(--transparent);
-  --ls-scrollbar-thumb-hover-color: rgba(0, 0, 0, 0.2);
-
-  --ls-head-text-color: var(--ls-primary-text-color);
-
-  --ls-icon-color: #908e8b;
-  --ls-search-icon-color: var(--ls-icon-color);
-  --ls-a-chosen-bg: #edece8;
-
-  --color-level-1: hsl(0, 5%, 98%);
-  --color-level-2: hsl(0, 5%, 97%);
-  --color-level-3: hsl(0, 5%, 96%);
-  --color-level-4: hsl(0, 5%, 95%);
-  --color-level-5: hsl(0, 5%, 94%);
-
-  --ui-button-bg: #66cec4;
-  --ui-button-color: #0a1312;
-  --ui-button-bg-hover: #5ec2b8;
-
-  --left-sb-bg-color-hover: var(--ls-quaternary-background-color);
-  --left-sb-bg-color: var(--ls-primary-background-color);
-
-  --left-sb-txt-color-hover: var(--ls-primary-text-color);
-  --left-sb-txt-color: #717171;
-
-  --external-link-color: #ee5020;
-  --external-link-color-hover: #93b83d;
-
-  --highlighter: #ffe79a;
-
-  --selection: rgba(190, 235, 245, 0.6);
-
-  --pre-code-bg: 249, 249, 249;
-  --pre-code-text: 34, 34, 34;
-  --pre-code-bd: var(--ls-border-color);
-
-  --page-ref-bg-hover: rgba(233, 241, 252, 1);
-
-  --caret-color: #ff2f81;
-
-  --box-shadow-sm: rgba(171, 171, 171, 0.1) 0 2px 3px 0;
-  --box-shadow-lg: rgba(171, 171, 171, 0.1) 0 4px 12px;
-  --drop-shadow-sm: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.2));
+  html[data-theme="light"] {
+    background-color: transparent;
+  }
 }
 
 .dark-theme,
@@ -234,6 +143,109 @@ html[data-theme="dark"] {
   --box-shadow-lg: rgba(0, 0, 0, 0.1) 0px 4px 12px;
   --drop-shadow-sm: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.2));
 }
+
+.white-theme,
+html[data-theme="light"] {
+  --red: #e75154;
+  --orange: #ffa542;
+  --green: #2a9d8f;
+  --golden: 255, 202, 86; /*rgb(255, 202, 86)*/
+  --blue: #5397d3;
+  --white: #ffffff;
+
+  --main-content-bg: var(--white);
+
+  --ls-primary-background-color: #f5f5f5;
+  --ls-secondary-background-color: var(--ls-primary-background-color);
+  --ls-tertiary-background-color: #eef3f7;
+  --ls-quaternary-background-color: #eeeeee;
+
+  --ls-table-tr-even-background-color: 245, 245, 245; /*rgb(245, 245, 245)*/
+  --ls-table-tr-odd-background-color: 255, 255, 255; /*rgb(255, 255, 255)*/
+
+  --ls-active-primary-color: var(--blue);
+  --ls-active-secondary-color: var(--blue);
+
+  --ls-block-properties-background-color: #f4f4f4;
+  --ls-page-properties-background-color: #f4f4f4;
+
+  --ls-search-background-color: var(--ls-primary-background-color);
+  --ls-border-color: rgba(232, 229, 229);
+  --ls-secondary-border-color: rgb(226, 231, 236);
+  --ls-guideline-color: var(--ls-border-color);
+  --ls-menu-hover-color: var(--ls-a-chosen-bg);
+  --ls-primary-text-color: #383232;
+  --ls-secondary-text-color: #383232;
+  --ls-title-text-color: var(--ls-primary-text-color);
+
+  --ls-link-text-color: #246eb4;
+  --ls-link-text-hover-color: #2466a6;
+  --ls-link-ref-text-color: #246eb4;
+  --ls-link-ref-text-hover-color: #2466a6;
+
+  --ls-tag-text-color: #3f3f3f;
+  --ls-tag-text-hover-color: #2b4451;
+
+  --ls-slide-background-color: var(--white);
+
+  --ls-block-bullet-border-color: #dedede;
+  --ls-block-bullet-color: #433f3840;
+  --ls-block-highlight-color: #c0e6fd;
+
+  --ls-selection-background-color: #557bed;
+
+  --ls-page-checkbox-color: var(--blue);
+  --ls-page-checkbox-border-color: var(--blue);
+
+  --ls-page-inline-code-color: 2, 144, 158; /* rgb(2, 144, 158) */
+  --ls-page-inline-code-bg-color: #f7f7f7;
+
+  --ls-scrollbar-foreground-color: rgb(125, 125, 125, 0.2);
+  --ls-scrollbar-background-color: var(--transparent);
+  --ls-scrollbar-thumb-hover-color: rgba(0, 0, 0, 0.2);
+
+  --ls-head-text-color: var(--ls-primary-text-color);
+
+  --ls-icon-color: #908e8b;
+  --ls-search-icon-color: var(--ls-icon-color);
+  --ls-a-chosen-bg: #edece8;
+
+  --color-level-1: hsl(0, 5%, 98%);
+  --color-level-2: hsl(0, 5%, 97%);
+  --color-level-3: hsl(0, 5%, 96%);
+  --color-level-4: hsl(0, 5%, 95%);
+  --color-level-5: hsl(0, 5%, 94%);
+
+  --ui-button-bg: #66cec4;
+  --ui-button-color: #0a1312;
+  --ui-button-bg-hover: #5ec2b8;
+
+  --left-sb-bg-color-hover: var(--ls-quaternary-background-color);
+  --left-sb-bg-color: var(--ls-primary-background-color);
+
+  --left-sb-txt-color-hover: var(--ls-primary-text-color);
+  --left-sb-txt-color: #717171;
+
+  --external-link-color: #ee5020;
+  --external-link-color-hover: #93b83d;
+
+  --highlighter: #ffe79a;
+
+  --selection: rgba(190, 235, 245, 0.6);
+
+  --pre-code-bg: 249, 249, 249;
+  --pre-code-text: 34, 34, 34;
+  --pre-code-bd: var(--ls-border-color);
+
+  --page-ref-bg-hover: rgba(233, 241, 252, 1);
+
+  --caret-color: #ff2f81;
+
+  --box-shadow-sm: rgba(171, 171, 171, 0.1) 0 2px 3px 0;
+  --box-shadow-lg: rgba(171, 171, 171, 0.1) 0 4px 12px;
+  --drop-shadow-sm: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.2));
+}
+
 /* START MAIN CONTENT & CP Right Sidebar */
 .cp__sidebar-main-content {
   margin: 0.25rem 0 1.25rem 0;
@@ -264,8 +276,8 @@ html[data-theme="dark"] {
 /* MAIN CONTENT & CP Right Sidebar END */
 
 /* START Journal Header */
-.journal-title h1::before,
-.is-journals h1::before {
+.journal-title .title::before,
+.is-journals .title::before {
   content: "📅";
   font-size: 0.8em;
   margin-right: 10px;
@@ -362,8 +374,8 @@ a[priority="C"]::before,
 }
 
 .block-children-left-border:hover {
-  background-color: rgba(var(--golden), 0.6);
-  border-radius: var(--radius-lg);
+  background-color: hsl(var(--tradewind), 1);
+	transition: var(--transition);
 }
 
 /* Bullet & Bullet Container END */
